fixed pagination on browse page not showing on mobile

--- a/apps/web/app/components/Browse/Browse.module.scss
+++ b/apps/web/app/components/Browse/Browse.module.scss
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: center;
   margin-top: 50px;
+  padding-bottom: 75px;
 }
 
 .empty {
